Adds full name of contributor

--- a/package.json
+++ b/package.json
@@ -148,7 +148,6 @@
     "Deshpande, Vardhaman <vardhaman.rd@gmail.com>",
     "Dojcsák, János <dojcsak.janos@gmail.com>",
     "Dyjas, Robert <15113729+robdy@users.noreply.github.com>",
-    "Fahad <72310648+codevfahad@users.noreply.github.com>",
     "Faleel, Mohamed Ashiq <ashiqf@gmail.com>",
     "Flores, Gaston <gaston.flrs@gmail.com>",
     "Ford, Lee <fordyman@gmail.com>",
@@ -177,6 +176,7 @@
     "Kelkar, Vipul <vipul.kelkar@outlook.com>",
     "Kesavanarayanan, Sudharsan <10280385+sudharsank@users.noreply.github.com>",
     "Khalil, Bassem <bk@bassems-air.home>",
+    "Khan, Mohd Fahad <72310648+codevfahad@users.noreply.github.com>",
     "Kirkham, Don <donkirkham@live.com>",
     "Kornet, Michał <kornetmichal@gmail.com>",
     "Kulkarni, Siddheya <siddheyakul@gmail.com>",
