--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [22]
+        node: [24]
 
     steps:
       - uses: actions/checkout@v4
@@ -49,13 +49,19 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         # node versions to run tests on
-        nodeRun: [22]
+        nodeRun: [24]
         # node version on which code was built and should be tested
-        nodeBuild: [22]
+        nodeBuild: [24]
         include:
           - os: ubuntu-latest
             nodeRun: 20
-            nodeBuild: 22
+            nodeBuild: 24
+          - os: ubuntu-latest
+            nodeRun: 22
+            nodeBuild: 24
+          - os: ubuntu-latest
+            nodeRun: 25
+            nodeBuild: 24
 
     steps:
       - name: Configure pagefile
@@ -125,7 +131,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
 
       - name: Cache node modules
         id: cache
