--- a/.github/workflows/release_next.yml
+++ b/.github/workflows/release_next.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [22]
+        node: [24]
 
     steps:
       - uses: actions/checkout@v4
@@ -50,13 +50,19 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         # node versions to run tests on
-        nodeRun: [22]
+        nodeRun: [24]
         # node version on which code was built and should be tested
-        nodeBuild: [22]
+        nodeBuild: [24]
         include:
           - os: ubuntu-latest
             nodeRun: 20
-            nodeBuild: 22
+            nodeBuild: 24
+          - os: ubuntu-latest
+            nodeRun: 22
+            nodeBuild: 24
+          - os: ubuntu-latest
+            nodeRun: 25
+            nodeBuild: 24
 
     steps:
       - name: Configure pagefile
@@ -129,7 +135,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
 
       - name: Cache node modules
         id: cache
@@ -163,13 +169,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: build-ubuntu-latest-22
+          name: build-ubuntu-latest-24
       - name: Unpack build artifact
         run: tar -xvf build.tar && rm build.tar
-      - name: Use Node.js 22
+      - name: Use Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
           registry-url: 'https://registry.npmjs.org'
       - name: Cache node modules
         id: cache
@@ -177,7 +183,7 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: node_modules-ubuntu-latest-22-${{ hashFiles('**/npm-shrinkwrap.json') }}
+          key: node_modules-ubuntu-latest-24-${{ hashFiles('**/npm-shrinkwrap.json') }}
       - name: Restore dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -192,7 +198,7 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-ubuntu-latest-22
+          name: build-ubuntu-latest-24
           path: build.tar
           overwrite: true
   deploy_docs:
@@ -220,13 +226,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: build-ubuntu-latest-22
+          name: build-ubuntu-latest-24
       - name: Unpack build artifact
         run: tar -xvf build.tar && rm build.tar
-      - name: Use Node.js 22
+      - name: Use Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
           registry-url: 'https://registry.npmjs.org'
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
