[fix] improvements based on feedback

--- a/.github/workflows/stale-issues.yml
+++ b/.github/workflows/stale-issues.yml
@@ -2,7 +2,7 @@ name: Close stale issues
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # runs weekly on Sunday at midnight
+    - cron: '0 0 * * *' # runs every night at midnight
 
 
 jobs:
@@ -13,8 +13,8 @@ jobs:
         with:
             days-before-stale: 335
             days-before-close: 30
-            stale-issue-message: 'This issue has been automatically marked as stale due to inactivity.'
+            stale-issue-message: 'This issue has been automatically marked as stale due to inactivity, and will be closed in 30 days if no further activity occurs. If you believe this issue should remain open, please comment on it to let us know. Any activity will reset the stale timer.'
             stale-issue-label: 'stale'
-            close-issue-message: 'Close as not planned'
+            close-issue-message: 'Close as not planned, feel free to reopen if new information arises.'
             close-issue-label: 'stale-closed'
             exempt-issue-labels: 'keep-open,epic'
