--- a/.github/workflows/stale-issues.yml
+++ b/.github/workflows/stale-issues.yml
@@ -13,6 +13,7 @@ jobs:
         with:
             days-before-stale: 335
             days-before-close: 30
+            operations-per-run: 100
             stale-issue-message: 'This issue has been automatically marked as stale due to inactivity, and will be closed in 30 days if no further activity occurs. If you believe this issue should remain open, please comment on it to let us know. Any activity will reset the stale timer.'
             stale-issue-label: 'stale'
             close-issue-message: 'Close as not planned, feel free to reopen if new information arises.'
