Adds new contributor

--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "De Cleyre, Nico <nico.de.cleyre@gmail.com>",
     "Deshpande, Vardhaman <vardhaman.rd@gmail.com>",
     "Dojcsák, János <dojcsak.janos@gmail.com>",
+    "Druzhkina, Antanina <totora246@gmail.com>",
     "Dyjas, Robert <15113729+robdy@users.noreply.github.com>",
     "Faleel, Mohamed Ashiq <ashiqf@gmail.com>",
     "Flores, Gaston <gaston.flrs@gmail.com>",
