--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -2,6 +2,9 @@ name: Check PR
 
 on: pull_request
 
+env:
+  NODE_VERSION: &node_version 24
+
 jobs:
   build:
     if: github.repository_owner == 'pnp'
@@ -9,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [24]
+        node: [*node_version]
 
     steps:
       - uses: actions/checkout@v4
@@ -49,19 +52,19 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         # node versions to run tests on
-        nodeRun: [24]
+        nodeRun: [*node_version]
         # node version on which code was built and should be tested
-        nodeBuild: [24]
+        nodeBuild: [*node_version]
         include:
           - os: ubuntu-latest
             nodeRun: 20
-            nodeBuild: 24
+            nodeBuild: *node_version
           - os: ubuntu-latest
             nodeRun: 22
-            nodeBuild: 24
+            nodeBuild: *node_version
           - os: ubuntu-latest
             nodeRun: 25
-            nodeBuild: 24
+            nodeBuild: *node_version
 
     steps:
       - name: Configure pagefile
@@ -101,7 +104,7 @@ jobs:
         with:
           path: |
             .eslintcache
-          key: eslintcache-${{ matrix.os }}-${{ hashFiles('npm-shrinkwrap.json', '.eslintrc.cjs') }}
+          key: eslintcache-${{ matrix.os }}-${{ hashFiles('npm-shrinkwrap.json', 'eslint.config.mjs') }}
       - name: Test with coverage
         # we run coverage only on Node that was used to build
         if: matrix.nodeRun == matrix.nodeBuild
@@ -131,7 +134,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         id: cache
