Updates actions to ESM

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -4,7 +4,7 @@
     "**/*.mock.js",
     "**/clientsidepages.js",
     "docs",
-    "**/ci-test-summary.cjs"
+    "**/ci-test-summary.mjs"
   ],
   "reporter": ["lcov", "text", "text-summary"],
   "check-coverage": true,
